bugfix: horizontal scrollbar for code blocks

--- a/app/styles/components/blog-post.scss
+++ b/app/styles/components/blog-post.scss
@@ -61,6 +61,7 @@
       background-color: $color-2;
       border-radius: 4px;
       padding: 1.5em;
+      overflow: auto;
 
       code {
         background-color: rgba(0, 0, 0, 0);
